--- a/listapp/static/css/style.css
+++ b/listapp/static/css/style.css
@@ -1,35 +1,34 @@
 .category{
     display: inline-block;
     padding:10px;
-    border-radius:5px;
+    border-radius:7px;
     color:white;
-    text-align: center;
-    width: 75px;
     font-size:12px;
+    width:96%;
+    margin-bottom:4px;
 
 }
 .category-Others {
-    background-color:red;
+    background-color:#9a9bbe;
 }
 .category-Work {
-    background-color:blue;
+    background-color:#9abeac;
 }
 .category-Home {
-    background-color:green;
+    background-color:#f6b37f;
 }
 .category-General {
-    background-color:grey;
+    background-color:#f67f90;
 }
 .category-School {
-    background-color:yellow;
+    background-color:#957ff6;
 }
 .category-Personal {
-    background-color:purple;
+    background-color:#e1f67f;
 }
 .date{
     text-transform:uppercase;
     font-size:10px;
-    color: #95a5a6;
-    font-weight:bold;
 
+    font-weight:bold;
 }
