--- a/listapp/static/css/style.css
+++ b/listapp/static/css/style.css
@@ -2,10 +2,10 @@
     display: inline-block;
     padding:10px;
     border-radius:7px;
-    color:white;
     font-size:12px;
     width:96%;
-    margin-bottom:4px;
+    margin-bottom:6px;
+    list-style-type:none;
 
 }
 .category-Others {
@@ -29,6 +29,9 @@
 .date{
     text-transform:uppercase;
     font-size:10px;
-
     font-weight:bold;
+}
+.btns{
+    border: none;
+    padding: .375rem .45rem
 }
