--- a/templates/listapp/index.html
+++ b/templates/listapp/index.html
@@ -8,11 +8,11 @@
 {% block content %}
     <nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding w3-animate-left" style="z-index:3; background-color:#084a46; width:270px;font-weight:bold;" id="mySidebar">
     <br>
-      <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+      <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%; font-size:22px">Close Menu</a>
       <div class="w3-bar-block">
         <div class="w3-center w3-margin">
             <img class="rounded-circle" src="{% static 'images/img.png' %}" width="90%" alt="profile">
-            <h3 style="color:#ccc">Ajayi Praise</h3>
+            <h4 style="color:#ccc">Ajayi Praise</h4>
         </div>
       </div>
     </nav>
@@ -43,7 +43,7 @@
             <div class="the-thirds" style="clear:both;">
                 <hr style="border: 1px solid #969696;">
                 <div class="w3-third w3-padding-small" >
-                    <div class="Do w3-white w3-border w3-border-white w3-round-xlarge w3-padding" style="height:500px; color:#212529!important;">
+                    <div class="Do w3-white w3-border w3-border-white w3-round-xlarge w3-padding" style="height:500px; overflow: auto; color:#212529!important;">
                         <div>
                             <h2 style="display:inline;">DO</h2>
                             <a style="display:inline;" class="w3-right" onclick="document.getElementById('id01').style.display='block'"><i class="fas fa-plus"></i></a>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                  <div class="w3-third w3-padding-small">
-                    <div class="Do w3-white w3-border w3-border-white w3-round-xlarge w3-padding" style="height:500px; color:#212529!important;">
+                    <div class="Do w3-white w3-border w3-border-white w3-round-xlarge w3-padding" style="height:500px;  overflow: auto; color:#212529!important;">
                         <h2 stle="color:#212529;">DONE</h2>
                         <hr style="border: 1px solid #505050;">
                         <ul style="padding:0; margin:0;">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                  <div class="w3-third w3-padding-small">
-                    <div class="Do w3-border w3-white w3-border-white w3-round-xlarge w3-padding" style="height:500px; color:#212529!important;">
+                    <div class="Do w3-border w3-white w3-border-white w3-round-xlarge w3-padding" style="height:500px;  overflow: auto; color:#212529!important;">
                         <h2 >MEMO</h2>
                         <hr style="border: 1px solid #505050;">
                         <ul style="padding:0; margin:0;">
