--- a/templates/listapp/index.html
+++ b/templates/listapp/index.html
@@ -6,20 +6,22 @@
 </head>
 <body >
 {% block content %}
+{%  if user.is_authenticated %}
+
     <nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding w3-animate-left" style="z-index:3; background-color:#084a46; width:270px;font-weight:bold;" id="mySidebar">
-    <br>
-      <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%; font-size:22px">Close Menu</a>
-      <div class="w3-bar-block">
-        <div class="w3-center w3-margin">
-            <img class="rounded-circle" src="{% static 'images/img.png' %}" width="90%" alt="profile">
-            <h4 style="color:#ccc">Ajayi Praise</h4>
+        <br>
+        <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%; font-size:22px">Close Menu</a>
+        <div class="w3-bar-block">
+            <div class="w3-center w3-margin">
+                <img class="rounded-circle" src="{% static 'images/img.png' %}" width="90%" alt="profile">
+                <h4 style="color:#ccc">{{user.username | title}}</h4>
+            </div>
         </div>
-      </div>
     </nav>
 
 <!-- Top menu on small screens -->
     <header class="w3-container w3-top w3-hide-large w3-padding" style="background-color:#084a46;">
-      <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
+        <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="w3_open()">☰</a>
     </header>
     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
@@ -77,7 +79,7 @@
                         </div>
                         <hr style="border: 1px solid #505050; clear:both;">
                         <ul style="padding:0; margin:0;">
-                            {% for todo in todo_items %}
+                            {% for todo in user.todo_set.all %}
                             <div class="category category-{{todo.category_name}}">
                                 <li><strong>{{todo.todo_text}}</strong>
                                     <form method="post" action="delete_todo/{{todo.id}}" style="display:inline;">
@@ -125,7 +127,18 @@
                 </div>
             </div>
         </div>
+
+        <div style="clear:both;">
+            <div class="categorys category-Work">Work</div>
+            <div class="categorys category-School">School</div>
+            <div class="categorys category-Others">Other</div>
+            <div class="categorys category-General">General</div>
+            <div class="categorys category-Personal">Personal</div>
+        </div>
     </div>
+{%else%}
+<p>please Login</p>
+{%endif%}
 {% endblock content %}
 </body>
 </html>
