added the memo and completed list

--- a/listapp/static/css/style.css
+++ b/listapp/static/css/style.css
@@ -6,7 +6,16 @@
     width:96%;
     margin-bottom:6px;
     list-style-type:none;
+    word-wrap:break-word;
+}
 
+textarea {
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
 }
 .categorys{
     display: inline-block;
